# com.sixt.testautomation.foreai-scripts

./: .env.example  .gitignore  README.md  get_otp_code.py  main.py  pyproject.toml  tdm_adapter.py  test_tdm_adapter.py
